# comp47950-qml-project

./: .gitignore  Makefile  README.md  mlflow_config.py  pyproject.toml  qml_mlflow_utils.py  requirements-mlflow.txt  requirements.txt
.devcontainer/: devcontainer.json
apps/nim_demo/: README.md  __init__.py  _path_setup.py  app.py  content.py  engine.py  environment.yml  loaders.py  play.py  play_config.py  play_layout.py  play_panel.py  play_session.py  play_turns.py  requirements.txt
apps/nim_demo/pages/: 01_play.py  02_problem.py  03_data.py  04_parity_features.py  05_encoding.py  06_vqc.py  07_qsvm.py  08_classical.py  09_training.py  10_noise_device.py  11_results.py  12_faq.py
apps/nim_demo/viz/: __init__.py  _constants.py  board.py  candidates.py  classical.py  encoding.py  history.py  kernels.py  results.py
data/: README.md
examples/: mlflow_logging_example.py
notebooks/: README.md  qml_project.ipynb  qml_project.py
notebooks/.workflow_cache/: classical_df.parquet  qsvm_device_payload_n100.pkl  qsvm_device_payload_n150.pkl  qsvm_device_payload_n25.pkl  qsvm_device_payload_n50.pkl  qsvm_device_result_n100.pkl  qsvm_device_result_n150.pkl  qsvm_device_result_n25.pkl  qsvm_device_result_n50.pkl  qsvm_workflow_df.parquet  quantum_winner_rows_qsvm.parquet  quantum_winner_rows_vqc.parquet  quantum_winners_summary.parquet  selection_table.parquet  vqc_device_payload_n100.pkl  vqc_device_payload_n150.pkl  vqc_device_payload_n215.pkl  vqc_device_payload_n25.pkl  vqc_device_payload_n50.pkl  vqc_device_result_n100.pkl  vqc_device_result_n150.pkl  vqc_device_result_n215.pkl  vqc_device_result_n25.pkl  vqc_device_result_n50.pkl  vqc_workflow_df.parquet
src/qml_project/: __init__.py  baselines.py  circuit.py  datasets.py  design_space.py  expressibility.py  ibm_runtime.py  nim_demo_export.py  notebook_setup.py  parallel_sweep.py  pareto_selection.py  preprocessing.py  qsvm.py  training.py  vqc_workflow.py
src/qml_project/architecture_diagnostics/: __init__.py  keys.py  load.py  log.py  run.py
src/qml_project/baselines/: __init__.py  ablation.py  evaluation.py  features.py  kernels.py  models.py  nim_policy.py  plots.py  sweep_results.py
src/qml_project/circuit/: __init__.py  builder.py  cz_pairs.py  decoding.py  losses.py
src/qml_project/device_inference/: __init__.py  device_cost.py  device_readiness.py  qsvm.py  refit_sweep.py  result_sweep.py  vqc.py
src/qml_project/nim/: __init__.py  data.py  encoding.py  game.py  state_utils.py
src/qml_project/qsvm/: __init__.py  comparison.py  kernel.py  mlflow_io.py  model.py  sweep.py
src/qml_project/report_plots/: __init__.py  comparison.py  styles.py  vqc_and_arch.py
src/qml_project/training/: __init__.py  adversarial.py  cost_metrics.py  evaluation.py  experiment_namespace.py  final_three_way_comparison.py  interpretability.py  metrics.py  mlflow_helpers.py  mlflow_run_index.py  mlflow_schema.py  multi_seed.py  noise_aer.py  noise_sweep.py  ood_sweep.py  results.py  stats.py  (+3 more)
tests/: test_baseline_kernels.py  test_expressibility_analysis.py  test_nim_encoding.py  test_parallel_sweeps.py  test_quantum_kernel_svm.py  test_simulated_training_sweep.py  test_vqc_design.py  test_vqc_noise_design.py
(+30 files in other folders)
