[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qml-project"
version = "0.1.0"
description = "COMP47950 Quantum Machine Learning: classical, simulated QML, and real-device pipelines."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "pandas",
    "matplotlib",
    "pylatexenc",
    "nbconvert>=7.17.0",
    "pytest>=9.0.2",
    "tqdm",
]

[dependency-groups]
notebook = [
    "jupyter",
    "ipykernel",
]
tracking = [
    "mlflow>=2.17.0,<3",
]
qiskit = [
    "qiskit>=1.3",
    "qiskit-aer",
]
pennylane = [
    "pennylane",
]
device = [
    "qiskit>=1.3",
    "qiskit-ibm-runtime",
]

[tool.uv]
default-groups = ["notebook", "tracking"]

[tool.setuptools.packages.find]
where = ["src"]
